# imgsync

./: .release-please-manifest.json  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  publish-release.yml  run.yml
etc/imgsync/: config-generator.conf  imgsync.conf.sample
imgsync/: __init__.py  commands.py  config.py  exception.py  glance.py  opts.py  version.py
imgsync/cmd/: __init__.py  cli.py
imgsync/distros/: __init__.py  base.py  centos.py  debian.py  ubuntu.py
