[metadata]
name = imgsync
summary = imgsync will download sync images from several distribution repositories and send them to an OpenStack Image service (Glance).
description-file =
    README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = http://github.com/alvarolopez/imgsync/
classifier =
    Environment :: OpenStack  
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    imgsync
data_files =
    etc/imgsync/imgsync.conf.sample = etc/imgsync/imgsync.conf.sample

[entry_points]
oslo.config.opts =
    imgsync = imgsync.opts:list_opts

imgsync.distros =
    centos6 = imgsync.distros.centos:CentOS6
    centos7 = imgsync.distros.centos:CentOS7
    ubuntu14 = imgsync.distros.ubuntu:Ubuntu14
    ubuntu16 = imgsync.distros.ubuntu:Ubuntu16
    ubuntu18 = imgsync.distros.ubuntu:Ubuntu18
    debian8 = imgsync.distros.debian:Debian8
    debian9 = imgsync.distros.debian:Debian9
    debiantesting = imgsync.distros.debian:DebianTesting

console_scripts =
    glance-imgsync = imgsync.cmd.cli:main
